js/src/tests/test262/built-ins/Error/prototype/stack/setter-receiver-is-prototype.js



























var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

assert.throws(TypeError, function () {
  set.call(Error.prototype, '');
}, 'set.call(Error.prototype, "")');





assert.throws(TypeError, function () {
  Error.prototype.stack = '';
}, 'assignment to Error.prototype.stack');


var desc = Object.getOwnPropertyDescriptor(Error.prototype, 'stack');
assert.notSameValue(desc, undefined, 'Error.prototype still has its own "stack" property');
assert.sameValue(typeof desc.get, 'function', 'getter is still installed');
assert.sameValue(typeof desc.set, 'function', 'setter is still installed');
assert.sameValue(desc.value, undefined, 'descriptor has no value (still an accessor)');
assert.sameValue(desc.writable, undefined, 'descriptor has no writable (still an accessor)');

reportCompare(0, 0);
